--- a/main.html
+++ b/main.html
@@ -17,11 +17,7 @@
     <link rel="stylesheet" type="text/css" href="/inc/css/top.css?2022080416" />
     <link rel="stylesheet" type="text/css" href="/inc/css/footer.css?ver=20230329?2022080416" />
 
-    <script type="text/javascript">
-        var http = 'http://www.digimonmasters.com';
-        var https = 'https://www.digimonmasters.com';
-        var g_domain = 'digimonmasters.com';
-    </script>
+   
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-YFSH910606"></script>
@@ -81,7 +77,7 @@
 
         <div id="wrap">
             <a href="" target="_blank">
-                <img src="https://djwebcta.000webhostapp.com/Site/Main/InGame/images/us/Banner1.bmp" />
+                <img src="https://digital-shinka.github.io/Site/Banner1.bmp" />
             </a>
         </div>
     </form>
